--- a/www.topmonks.cz/src/stylesheets/sub-pages/main.scss
+++ b/www.topmonks.cz/src/stylesheets/sub-pages/main.scss
@@ -13,6 +13,9 @@ p > a {
 ul li {
   line-height: 40px;
 }
+.sub-info {
+  color: var(--tm-black);
+}
 
 .jumbotron {
   h2 {
@@ -52,6 +55,9 @@ ul li {
   .advicing_btn {
     background-color: var(--tm-btn);
     color: var(--tm-black-title);
+    &:hover {
+      background-color: var(--tm-primary-light);
+    }
   }
 }
 
