--- a/www.topmonks.cz/src/stylesheets/sub-pages/testimonials.scss
+++ b/www.topmonks.cz/src/stylesheets/sub-pages/testimonials.scss
@@ -1,6 +1,8 @@
 .testimonials {
   blockquote {
-    height: 140px;
     margin: 1em 0 2.5em;
+    @media screen and (min-width: 768px) {
+      height: 140px;
+    }
   }
 }
