--- a/www.topmonks.cz/src/stylesheets/hp/advicing.scss
+++ b/www.topmonks.cz/src/stylesheets/hp/advicing.scss
@@ -16,18 +16,29 @@
 
   .advicing_btn {
     margin: 1em auto;
+
     .action-button {
-      background-color: var( --tm-btn);
+      background-color: var(--tm-btn);
       color: var(--tm-black-title);
       padding: 18px 32px;
       box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.162704);
+
       &:hover {
         background-color: var(--tm-primary-light);
         box-shadow: none;
       }
+
       @media (max-width: 580px) {
-          padding: 18px;
+        padding: 18px;
       }
+    }
+  }
+
+  a {
+    text-decoration: none;
+
+    p {
+      color: var(--tm-black);
     }
   }
 }
