Team - members + bgnd

--- a/www.topmonks.cz/src/stylesheets/sub-pages/team.scss
+++ b/www.topmonks.cz/src/stylesheets/sub-pages/team.scss
@@ -53,7 +53,7 @@
   }
 }
 .tm-team {
-  background: #fff url("https://res.cloudinary.com/topmonks/image/upload/v1565755279/TM%20Subpages/subbages_shadow-bgnd.png") no-repeat;
+  background: #fff url("https://res.cloudinary.com/topmonks/image/upload/dpr_auto,q_auto,f_auto/v1566810863/TM%20Subpages/team_bgnd.png") no-repeat;
   background-size: 100% auto;
   .box {
     border-radius: 20px;
