--- a/monkslab.cz/src/stylesheets/main.scss
+++ b/monkslab.cz/src/stylesheets/main.scss
@@ -1,7 +1,110 @@
-@import "../../../../node_modules/@material/layout-grid/mdc-layout-grid";
+@import "@material/layout-grid/mdc-layout-grid";
 @import "common/colors";
 :root {
   --mdc-layout-grid-margin-desktop: 24px;
   --mdc-layout-grid-gutter-desktop: 20px;
   --mdc-layout-grid-column-width-desktop: 60px;
+  --ml-black-title: #1D1D1D;
+  --ml-black-text: #565656;
+}
+
+.layout-width {
+  max-width: 1200px;
+}
+
+header {
+  background: #FFFFFF;
+}
+body {
+  font-family: Neueeinstellung, sans-serif;
+  color: var(--ml-black-title);
+  background: #F5F6F7;
+}
+
+//TYPOGRAPHY
+h1 {
+  font-size: 48px;
+  line-height: 144%;
+}
+h2 {
+  font-size: 40px;
+  line-height: 144%;
+}
+
+h3 {
+  font-size: 32px;
+  line-height: 144%;
+}
+
+p {
+  font-size: 24px;
+  line-height: 144%;
+  color: var(--ml-black-text);
+}
+p.helper {
+  font-size: 14px;
+}
+a {
+  color: #565656;
+  text-decoration: underline;
+  &:hover {
+    font-weight: bold;
+  }
+}
+
+@media (max-width: 740px) {
+  h1 {
+    font-size: 30px;
+  }
+  h2 {
+    font-size: 28px;
+  }
+
+  h3 {
+    font-size: 24px;
+  }
+
+  p {
+    font-size: 18px;
+  }
+}
+hr {
+  height: 2px;
+  border: none;
+  background: #D5D5D5;
+  margin: 0;
+  padding: 0;
+}
+.btn {
+  font-size: 18px;
+  color: #FFFFFF;
+  padding: 24px;
+  text-decoration: none;
+  background-color: #5C5FD4;
+}
+
+//
+//SECTION: MEMBERSHIP
+.paragraph {
+  max-width: 650px;
+}
+
+//SECTION: ABOUT MONKS LAB
+
+.about {
+  .box {
+    padding: 18px 34px;
+    background: #FFFFFF;
+    box-shadow: 4px 20px 40px rgba(0, 0, 0, 0.1);
+    p {
+      font-size: 20px;
+    }
+  }
+}
+
+footer {
+  p  {
+    font-size: 16px;
+    line-height: 144%;
+  }
 }
