--- a/monkslab.cz/src/stylesheets/main.scss
+++ b/monkslab.cz/src/stylesheets/main.scss
@@ -1,5 +1,6 @@
 @import "@material/layout-grid/mdc-layout-grid";
 @import "common/colors";
+
 :root {
   --mdc-layout-grid-margin-desktop: 24px;
   --mdc-layout-grid-gutter-desktop: 20px;
@@ -15,6 +16,7 @@
 header {
   background: #FFFFFF;
 }
+
 body {
   font-family: Neueeinstellung, sans-serif;
   color: var(--ml-black-title);
@@ -26,6 +28,7 @@ h1 {
   font-size: 48px;
   line-height: 144%;
 }
+
 h2 {
   font-size: 40px;
   line-height: 144%;
@@ -41,14 +44,17 @@ p {
   line-height: 144%;
   color: var(--ml-black-text);
 }
+
 p.helper {
   font-size: 14px;
 }
+
 a {
   color: #565656;
   text-decoration: underline;
+
   &:hover {
-    font-weight: bold;
+    color: #5C5FD4;
   }
 }
 
@@ -68,6 +74,7 @@ a {
     font-size: 18px;
   }
 }
+
 hr {
   height: 2px;
   border: none;
@@ -75,6 +82,7 @@ hr {
   margin: 0;
   padding: 0;
 }
+
 .btn {
   font-size: 18px;
   color: #FFFFFF;
@@ -84,6 +92,20 @@ hr {
 }
 
 //
+//SECTION: INTRO
+@media screen and (min-width: 1441px){
+  background: url("/images/img_monks-lab.png") no-repeat right calc(25% - 160px) top;
+  background-size: 700px 800px;
+  overflow-x: hidden;
+}
+@media (min-width: 1024px) and (max-width: 1440px){
+  background: url("/images/img_monks-lab.png") no-repeat right calc(25% - 160px) top;
+  background-size: 500px 600px;
+  overflow-x: hidden;
+}
+.intro_paragraph {
+  padding: 4em 0;
+}
 //SECTION: MEMBERSHIP
 .paragraph {
   max-width: 650px;
@@ -96,15 +118,17 @@ hr {
     padding: 18px 34px;
     background: #FFFFFF;
     box-shadow: 4px 20px 40px rgba(0, 0, 0, 0.1);
+
     p {
       font-size: 20px;
     }
   }
 }
+//FOOTER
 
 footer {
-  p  {
+  p, a {
     font-size: 16px;
-    line-height: 144%;
+    color: var(--ml-black-title);
   }
 }
