Monks lab ikony

--- a/monkslab.cz/src/stylesheets/main.scss
+++ b/monkslab.cz/src/stylesheets/main.scss
@@ -203,6 +203,12 @@ header {
     p {
       font-size: 20px;
     }
+    svg {
+      margin-top: 1em;
+    }
+  }
+  @media screen and (min-width: 840px) {
+    margin-top: 4em;
   }
 }
 
@@ -214,205 +220,3 @@ footer {
     color: var(--ml-black-title);
   }
 }
-
-//HAMBURGER MENU
-
-.logo {
-  display: flex;
-  align-items: center;
-  font-size: 28px;
-  font-weight: 700;
-  line-height: 32px;
-  letter-spacing: -1px;
-  text-decoration: none;
-  text-transform: uppercase;
-  @media screen and (max-width: 479px) {
-    font-size: 24px;
-    padding-top: 2px;
-    justify-content: flex-end;
-  }
-  @media screen and (max-width: 839px) {
-    font-size: 24px;
-    padding-top: 2px;
-    justify-content: flex-end;
-  }
-}
-
-.logo .monk {
-  fill: currentColor;
-  padding-right: 8px;
-}
-
-.hamburger {
-  @media screen and (min-width: 840px) {
-    display: none;
-  }
-  .hamburger__container {
-    display: inline-block;
-    cursor: pointer;
-    padding: 8px;
-    width: 18px;
-    height: 18px;
-    position: relative;
-  }
-  .hamburger__container::after {
-    content: "menu";
-    color: var(--tm-hamburger-label);
-    text-transform: uppercase;
-    font-size: 13px;
-    position: absolute;
-    top: 5px;
-    left: 36px;
-  }
-  .hamburger__bar {
-    background-color: var(--ml-black-title);
-    width: 20px;
-    height: 2px;
-    position: absolute;
-    top: 16px;
-    transition: transform 0.4s;
-    &:first-of-type {
-      transform: translateY(-6px);
-    }
-    &:last-of-type {
-      transform: translateY(6px);
-    }
-  }
-  .hamburger__container--open {
-    .hamburger__bar:first-of-type {
-      transform: rotate(-45deg);
-    }
-
-    .hamburger__bar:nth-of-type(2) {
-      opacity: 0;
-    }
-
-    .hamburger__bar:last-of-type {
-      transform: rotate(45deg);
-    }
-  }
-}
-
-.app-bar {
-  position: fixed;
-  width: 100vw;
-  z-index: 1000;
-  top: 0;
-  transition: all 0.2s;
-  background-color: #FFFFFF;
-  @media screen and (max-width: 839px) {
-    height: 52px;
-    .layout-wrapper {
-      padding: 8px 16px 0 8px;
-    }
-    + main {
-      margin-top: 52px;
-    }
-  }
-  @media screen and (min-width: 840px) {
-    height: 78px;
-    .layout-wrapper {
-      padding: 23px 0 0 16px;
-    }
-    + main {
-      margin-top: 78px;
-    }
-  }
-}
-
-.app-bar--sticky {
-  background: var(--ml-black-title);
-  box-shadow: grey;
-  .logo {
-    color: var(--ml-black-title);
-  }
-  .hamburger .hamburger__bar {
-    background-color: var(--ml-dark-purple);
-  }
-  .hamburger .hamburger__container::after {
-    color: rgba(0, 0, 0, 0.25);
-  }
-  @media screen and (min-width: 840px) {
-    height: 78px;
-    .layout-wrapper {
-      padding: 23px 0 0 16px;
-    }
-    + main {
-      margin-top: 78px;
-    }
-    .menu__list a {
-      color: var(--ml-black-title);
-      &:hover {
-        color: var(--ml-dark-purple);
-      }
-    }
-  }
-}
-
-.app-bar.app-bar--open {
-  color: #fff;
-  .hamburger__container::after {
-    color: rgba(255, 255, 255, 0.5);
-  }
-  .hamburger__bar {
-    background-color: var(--ml-black-title);
-  }
-  .menu {
-    transform: translate(-8px, -64px);
-    z-index: -1;
-  }
-}
-
-.menu {
-  @media screen and (max-width: 839px) {
-    width: 100vw;
-    height: 100vh;
-    padding-top: 64px;
-    transform: translate(calc(-100vw - 12px), -64px);
-    transform: translate(calc(-140vw - 12px), -64px);
-    position: fixed;
-    z-index: 3;
-    transition: transform 0.3s;
-    overflow: hidden;
-    background-color: var(--ml-dark-purple);
-    color: #fff;
-
-    .menu__list li {
-      margin: 0 24px;
-    }
-    .menu__list li + li {
-      border-top: 1px solid rgba(255, 255, 255, 0.25);
-    }
-    .menu__list a {
-      display: block;
-      padding: 12px;
-      margin: 4px;
-      text-transform: capitalize;
-    }
-  }
-}
-
-.menu--horizontal .menu__list {
-  display: flex;
-  align-items: flex-start;
-  justify-content: flex-end;
-  margin: 0;
-}
-.menu--horizontal .menu__list a {
-  text-transform: uppercase;
-  font-weight: bold;
-  display: inline-block;
-  padding: 4px 8px;
-  color: var(--ml-black-title);
-
-  &:hover {
-    color: var(--ml-dark-purple);
-  }
-}
-
-
-
-.tm-menu--horizontal .tm-menu__list li + li {
-  margin-left: 4px;
-}
-
