--- a/monkslab.cz/src/stylesheets/main.scss
+++ b/monkslab.cz/src/stylesheets/main.scss
@@ -1,3 +1,4 @@
+@import "neueeinstellung";
 @import "@material/layout-grid/mdc-layout-grid";
 @import "common/colors";
 
@@ -52,6 +53,7 @@ p.helper {
 a {
   color: #565656;
   text-decoration: underline;
+
   &:hover {
     color: var(--ml-dark-purple);
   }
@@ -75,7 +77,7 @@ a {
 }
 
 hr {
-  height: 1px;
+  height: 2px;
   border: none;
   background: #D5D5D5;
   margin: 0;
@@ -94,12 +96,26 @@ hr {
     background: var(--ml-dark-purple);
   }
 }
+.box {
+  padding: 18px 34px;
+  background: #FFFFFF;
+  box-shadow: 4px 20px 40px rgba(0, 0, 0, 0.1);
+
+  p {
+    font-size: 20px;
+  }
+
+  svg {
+    margin-top: 1em;
+  }
+}
 
 //
 
 //HEADER *Hamburger below
 header {
   background: #FFFFFF;
+
   nav {
     float: right;
   }
@@ -111,13 +127,13 @@ header {
     a {
       color: var(--ml-black-title);
       text-decoration: none;
-      padding-right: 34px;
+      padding-right: 44px;
     }
   }
 }
 
 //SECTION: INTRO
-.intro {
+.hp-intro {
   .email-input {
     background: #FFFFFF;
     box-shadow: 4px 20px 40px rgba(0, 0, 0, 0.1);
@@ -136,6 +152,7 @@ header {
       height: 56px;
       float: right;
       margin: 8px;
+
       &:hover {
         background: var(--ml-dark-purple);
       }
@@ -184,29 +201,17 @@ header {
   .paragraph {
     max-width: 650px;
   }
-  .membership_btn {
-    margin: 2em 0 5em;
-    @media (max-width: 839px) {
-      text-align: center;
-    }
+}
+.membership_btn {
+  margin: 2em 0 5em;
+  @media (max-width: 839px) {
+    text-align: center;
   }
 }
 
 //SECTION: ABOUT MONKS LAB
 
 .about {
-  .box {
-    padding: 18px 34px;
-    background: #FFFFFF;
-    box-shadow: 4px 20px 40px rgba(0, 0, 0, 0.1);
-
-    p {
-      font-size: 20px;
-    }
-    svg {
-      margin-top: 1em;
-    }
-  }
   @media screen and (min-width: 840px) {
     margin-top: 4em;
   }
@@ -249,10 +254,15 @@ footer {
   padding-right: 8px;
 }
 
+.app-bar_menu {
+  align-self: center;
+}
+
 .hamburger {
   @media screen and (min-width: 840px) {
     display: none;
   }
+
   .hamburger__container {
     display: inline-block;
     cursor: pointer;
@@ -261,15 +271,18 @@ footer {
     height: 18px;
     position: relative;
   }
+
   .hamburger__container::after {
     content: "menu";
-    color: var(--tm-hamburger-label);
+    color: var(--ml-black-title);
     text-transform: uppercase;
     font-size: 13px;
     position: absolute;
     top: 5px;
     left: 36px;
+    margin-top: 4px;
   }
+
   .hamburger__bar {
     background-color: var(--ml-black-title);
     width: 20px;
@@ -277,13 +290,16 @@ footer {
     position: absolute;
     top: 16px;
     transition: transform 0.4s;
+
     &:first-of-type {
       transform: translateY(-6px);
     }
+
     &:last-of-type {
       transform: translateY(6px);
     }
   }
+
   .hamburger__container--open {
     .hamburger__bar:first-of-type {
       transform: rotate(-45deg);
@@ -299,45 +315,18 @@ footer {
   }
 }
 
-.app-bar {
-  position: fixed;
-  width: 100vw;
-  z-index: 1000;
-  top: 0;
-  transition: all 0.2s;
-  background-color: var(--tm-white);
-  @media screen and (max-width: 839px) {
-    height: 52px;
-    .layout-wrapper {
-      padding: 8px 16px 0 8px;
-    }
-    + main {
-      margin-top: 52px;
-    }
-  }
-  @media screen and (min-width: 840px) {
-    height: 78px;
-    .layout-wrapper {
-      padding: 23px 0 0 16px;
-    }
-    + main {
-      margin-top: 78px;
-    }
-  }
-}
-
 .app-bar--sticky {
   background: #FFFFFF;
   box-shadow: var(--tm-basic-shadow);
-  .logo {
-    color: var(--ml-black-title);
-  }
+
   .hamburger .hamburger__bar {
     background-color: var(--ml-black-title);
   }
+
   .hamburger .hamburger__container::after {
-    color: rgba(0, 0, 0, 0.25);
+    color: var(--ml-black-text);
   }
+
   @media screen and (min-width: 840px) {
     height: 78px;
     .layout-wrapper {
@@ -347,9 +336,10 @@ footer {
       margin-top: 78px;
     }
     .menu__list a {
-      color: var(--tm-black-title);
+      color: var(--ml-black-title);
+
       &:hover {
-        color: var(--tm-primary);
+        color: var(--ml-black-text);
       }
     }
   }
@@ -357,18 +347,18 @@ footer {
 
 .app-bar.app-bar--open {
   color: #fff;
+
   .hamburger__container::after {
-    color: rgba(255, 255, 255, 0.5);
+    color: var(--ml-black-text);
   }
+
   .hamburger__bar {
-    background-color: #fff;
+    background-color: var(--ml-black-text);
   }
-  .logo {
-    color: #fff;
-  }
+
   .menu {
     transform: translate(-8px, -64px);
-    z-index: -1;
+    z-index: 1;
   }
 }
 
@@ -376,16 +366,18 @@ footer {
   @media screen and (max-width: 839px) {
     width: 100vw;
     height: 100vh;
-    padding-top: 64px;
+    margin-top: 64px;
     transform: translate(calc(-100vw - 12px), -64px);
     transform: translate(calc(-140vw - 12px), -64px);
     position: fixed;
     z-index: 3;
     transition: transform 0.3s;
     overflow: hidden;
-    background-color: var(--tm-secondary);
+    background-color: var(--ml-dark-purple);
     color: #fff;
-
+    ul.menu__list {
+      display: inline-grid;
+    }
     .menu__list li {
       margin: 0 24px;
     }
@@ -393,10 +385,11 @@ footer {
       border-top: 1px solid rgba(255, 255, 255, 0.25);
     }
     .menu__list a {
+      color: #FFFFFF;
       display: block;
       padding: 12px;
       margin: 4px;
-      text-transform: capitalize;
+      text-transform: uppercase;
     }
   }
 }
@@ -407,21 +400,3 @@ footer {
   justify-content: flex-end;
   margin: 0;
 }
-.menu--horizontal .menu__list a {
-  text-transform: uppercase;
-  font-weight: bold;
-  display: inline-block;
-  padding: 4px 8px;
-  color: var(--tm-black-title);
-
-  &:hover {
-    color: var(--tm-primary);
-  }
-}
-
-
-
-.menu--horizontal .menu__list li + li {
-  margin-left: 4px;
-}
-
