--- a/monkslab.cz/src/stylesheets/main.scss
+++ b/monkslab.cz/src/stylesheets/main.scss
@@ -49,7 +49,9 @@ p {
   line-height: 144%;
   color: var(--ml-black-text);
 }
-
+p.paragraph_text {
+  font-size: 16px;
+}
 p.helper {
   font-size: 14px;
   display: flex;
@@ -199,16 +201,18 @@ header {
     box-shadow: 4px 20px 40px rgba(0, 0, 0, 0.1);
 
     input {
+      font-family: Neue Einstellung;
       border: none;
       padding: 26px;
     }
 
     button {
+      font-family: Neue Einstellung;
       font-size: 16px;
       color: #FFFFFF;
       background: var(--ml-purple);
       border: none;
-      width: 126px;
+      width: 144px;
       height: 56px;
       float: right;
       margin: 8px;
