--- a/monkslab.cz/src/stylesheets/clenstvi.scss
+++ b/monkslab.cz/src/stylesheets/clenstvi.scss
@@ -1,6 +1,7 @@
 h1, h2 {
   text-align: center;
 }
+
 .box {
   padding: 28px 34px;
 
@@ -32,32 +33,87 @@ h1, h2 {
 }
 
 .events {
-  a {
-    text-decoration: none;
-    &:hover {
-      color: var(--ml-black-title);
+  @media screen and (min-width: 740px) {
+    .box_btn {
+      position: relative;
+    }
+
+    .overlay {
+      position: absolute;
+      display: flex;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      opacity: 0;
+      z-index: 0;
+      background-color: rgba(92, 95, 212, 0.9);
+      transition: opacity .2s ease, z-index .2s ease;
+
+      a {
+        font-size: 32px;
+        text-decoration: none;
+        background: none;
+        margin: auto;
+        &:hover {
+          color: var(--ml-black-title);
+        }
+      }
+    }
+
+    .imghov:hover .overlay,
+    .imghov .overlay:hover {
+      opacity: 1;
+      z-index: 4;
     }
   }
+
   .box--grey {
+    position: relative;
     background-color: var(--ml-grey);
+    z-index: 1;
+
     h3 {
       color: var(--ml-black-title);
       margin-bottom: 0;
     }
+
     p {
       font-size: 20px;
       color: var(--ml-black-text);
     }
+
     .event_time {
       margin-top: 1em;
     }
+
     @media (max-width: 740px) {
       padding: 24px;
     }
-    &:hover {
+
+  }
+
+  .box--button {
+    color: #FFFFFF;
+    background-color: rgba(92, 95, 212, 0.6);
+    padding: 100px;
+    display: none;
+    z-index: 4;
+
+    .button {
+      color: #FFFFFF;
       background-color: rgba(92, 95, 212, 0.6);
+      padding: 100px;
+
+      &:hover, &:focus {
+        background-color: rgba(92, 95, 212, 0.6);
+        display: flex;
+        z-index: 2;
+        width: 100%;
+      }
     }
   }
+
   .event_icon {
     align-self: center;
     text-align: center;
