Added Case Studies Profi-Option + XIXOIO

--- a/www.topmonks.com/src/html/components/case-studies/index.html
+++ b/www.topmonks.com/src/html/components/case-studies/index.html
@@ -47,6 +47,46 @@
           API.</p>
       </div>
       {% endif %}
+
+      {% if caseStudiesData.activeCase != 'adler' %}
+      <div
+        class="tm-case-studies__clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-{{gridSpan}}-desktop">
+        <a href="/case-studies/adler/">
+          <div class="tm-case-studies__logo tm-case-studies__logo--adler">
+            <div class="tm-bgnd-wrapper">{{macros.sprite('img_logo_adler')}}</div>
+          </div>
+          <h3>Adler</h3></a>
+        <p>In close cooperation with the client, we created software that is not only nice but also user-friendly.
+          Besides, it saves employees' time through the automation of several workflows.</p>
+      </div>
+      {% endif %}
+
+      {% if caseStudiesData.activeCase != 'profi-option' %}
+      <div
+        class="tm-case-studies__clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-{{gridSpan}}-desktop">
+        <a href="/case-studies/profi-option/">
+          <div class="tm-case-studies__logo tm-case-studies__logo--profi-option">
+            <div class="tm-bgnd-wrapper">{{macros.sprite('img_logo_profi-option')}}</div>
+          </div>
+          <h3>Profi Option</h3></a>
+        <p>Our team was asked to review the 24Cryptex trading app which had problems
+          with usability, overall look and feel of their platform.</p>
+      </div>
+      {% endif %}
+
+      {% if caseStudiesData.activeCase != 'xixoio' %}
+      <div
+        class="tm-case-studies__clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-{{gridSpan}}-desktop">
+        <a href="/case-studies/xixoio/">
+          <div class="tm-case-studies__logo tm-case-studies__logo--xixoio">
+            <div class="tm-bgnd-wrapper">{{macros.sprite('img_logo_xixoio')}}</div>
+          </div>
+          <h3>XIXOIO</h3></a>
+        <p>The TopMonks Blockchain team was approached at the time where their own IPCO
+          was in the preparation. In just 3&nbsp;days we have managed to draft the complete
+          token issuance architecture.</p>
+      </div>
+      {% endif %}
     </div>
   </div>
 </section>
