--- a/www.topmonks.com/src/stylesheets/components/case-studies/index.scss
+++ b/www.topmonks.com/src/stylesheets/components/case-studies/index.scss
@@ -5,6 +5,7 @@
     text-align: left;
     margin-top: 14px;
     margin-bottom: 0;
+
     &:after {
       content: "";
       width: 59px;
@@ -14,21 +15,25 @@
       margin: 8px 0;
     }
   }
-  a:hover{
+
+  a:hover {
     text-decoration: none;
   }
 }
+
 .tm-case-studies__clients + .tm-case-studies__clients {
   margin-top: 24px;
   @media (min-width: 480px) {
     margin-top: 0;
   }
 }
+
 .tm-case-studies__logo {
   height: 255px;
   border-radius: 20px;
   overflow: hidden;
   -webkit-transform: translate3d(0, 0, 0);
+
   .tm-bgnd-wrapper {
     display: flex;
     align-items: center;
@@ -39,46 +44,64 @@
     height: 100%;
     transition: transform 0.2s ease-in-out;
   }
+
   .sprite {
     width: 33%;
     color: white;
     transition: width 0.2s ease-in-out;
   }
+
   svg {
     fill: currentColor;
   }
+
   //svg logo colors
   .-img_logo_pricefx {
     --color-2: #CFCFCF;
   }
 }
+
 .tm-case-studies__logo:hover {
   .tm-bgnd-wrapper {
     transform: scale(1.1);
   }
+
   .sprite {
     width: 45%;
   }
 }
+
 .tm-case-studies__title {
   text-align: center;
 }
+
 .tm-case-studies__logo--gorealeurope .tm-bgnd-wrapper {
   background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_322,dpr_auto,q_auto,f_auto/v1541168133/topmonks.com/bgnd_cs_gorealeurope.png");
 }
+
 .tm-case-studies__logo--pricefx .tm-bgnd-wrapper {
   background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_322,dpr_auto,q_auto,f_auto/v1532593856/topmonks.com/bgnd_cs_pricefx.jpg");
 }
+
 .tm-case-studies__logo--ceska-sporitelna .tm-bgnd-wrapper {
   background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_322,dpr_auto,q_auto,f_auto/v1532593856/topmonks.com/bgnd_cs_cs.jpg");
 }
+
 .tm-case-studies__logo--adler .tm-bgnd-wrapper {
   background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_322,dpr_auto,q_auto,f_auto/v1532593856/topmonks.com/bgnd_cs_adler.jpg");
 }
 
+.tm-case-studies__logo--profi-option .tm-bgnd-wrapper {
+  background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_322,dpr_auto,q_auto,f_auto/v1569328524/topmonks.com/bgnd_profi-option.png");
+}
+
+.tm-case-studies__logo--xixoio .tm-bgnd-wrapper {
+  background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_322,dpr_auto,q_auto,f_auto/v1569328525/topmonks.com/bgnd_xixoio.png");
+}
+
 @media screen and (min-device-pixel-ratio: 2),
-  screen and (min-resolution: 192dpi),
-  screen and (min-resolution: 2dppx) {
+screen and (min-resolution: 192dpi),
+screen and (min-resolution: 2dppx) {
   .tm-case-studies__logo--gorealeurope .tm-bgnd-wrapper {
     background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_322,dpr_2,q_auto,f_auto/v1541168133/topmonks.com/bgnd_cs_gorealeurope.png");
   }
@@ -91,5 +114,13 @@
   .tm-case-studies__logo--adler .tm-bgnd-wrapper {
     background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_322,dpr_2,q_auto,f_auto/v1532593856/topmonks.com/bgnd_cs_adler.jpg");
   }
+  .tm-case-studies__logo--profi-option .tm-bgnd-wrapper {
+    background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_322,dpr_2,q_auto,f_auto/v1569328524/topmonks.com/bgnd_profi-option.png");
+  }
+
+  .tm-case-studies__logo--xixoio .tm-bgnd-wrapper {
+    background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_322,dpr_2,q_auto,f_auto/v1569328525/topmonks.com/bgnd_xixoio.png");
+  }
 }
+
 /* CASE STUDIES SECTION END */
