--- a/www.hlidacshopu.cz/src/stylesheets/main.scss
+++ b/www.hlidacshopu.cz/src/stylesheets/main.scss
@@ -2,13 +2,13 @@
 @import "common/colors";
 
 :root {
-  --light-black: #2E2828;
-  --grey-sub-text: #4F4F4F;
-  --grey: #B1B1B1;
+  --grey: #2E2828;
   --dark-grey: #455A64;
-  --light-grey: #8A99A1;
+  --light-grey: #4F4F4F;
   --sub-info-grey: #979797;
+  --sub-title: #515151;
   --purple: #545FEF;
+
 
   --mdc-layout-grid-margin-desktop: 24px;
   --mdc-layout-grid-gutter-desktop: 20px;
@@ -25,8 +25,25 @@
 
 body {
   font-family: 'Montserrat', sans-serif;
-  background: url("/images/main-top_bgnd.svg") top center no-repeat;
+  background: url("https://res.cloudinary.com/topmonks/image/upload/v1572182178/www.hlidacshopu.cz/background.jpg") top center no-repeat;
   background-size: 100%;
+}
+
+header {
+  background-color: white;
+  height: 60px;
+  padding-top: 24px;
+
+  .app-bar {
+    position: fixed;
+    width: 100vw;
+    z-index: 1000;
+    top: 0;
+    -webkit-transition: all .2s;
+    -o-transition: all .2s;
+    transition: all .2s;
+    background-color: var(--tm-white);
+  }
 }
 
 // TYPOGRAPHY //
@@ -43,6 +60,15 @@ h2 {
   text-align: center;
 }
 
+h2.sub-title {
+  font-size: 13px;
+  font-weight: normal;
+  color: var(--sub-title);
+  line-height: 16px;
+  text-align: left;
+  margin-top: 2em;
+}
+
 h3 {
   font-size: 18px;
   line-height: 22px;
@@ -51,7 +77,7 @@ h3 {
 
 p {
   font-size: 18px;
-  color: var(--light-grey);
+  color: var(--grey);
   line-height: 28px;
 }
 
@@ -72,7 +98,7 @@ img, svg {
 
   p {
     font-size: 16px;
-    color: var(--light-grey);
+    color: var(--grey);
   }
   .icon svg {
     height: 100%;
@@ -122,6 +148,10 @@ img, svg {
   line-height: 20px;
 }
 
+.text--purple {
+  color: var(--purple);
+}
+
 // HEADER //
 
 header {
@@ -147,41 +177,24 @@ header {
   }
 
   ul li {
+    font-size: 13px;
+    letter-spacing: 1px;
+    margin: 0 14px;
     list-style: none;
     display: -ms-inline-flexbox;
     display: inline-flex;
 
-    a {
-      font-size: 13px;
-      text-transform: uppercase;
-      color: var(--ml-black-title);
-      text-decoration: none;
-      margin-right: 44px;
-      border-bottom: 1px solid rgba(0, 0, 0, 0);
-    }
-
-    a {
-      &:hover {
-        border-top: 4px solid blue;
-      }
+    &:hover {
+      color: var(--purple);
     }
   }
 
-  .app-bar_menu {
-    -ms-flex-item-align: center;
-    align-self: center;
-  }
 }
+
 
 // Section: MAIN //
 .main {
-  h2 {
-    font-size: 13px;
-    font-weight: normal;
-    line-height: 16px;
-    text-align: left;
 
-  }
   .email-input {
     background: #FFFFFF;
     box-shadow: 0px 20px 20px rgba(92, 98, 205, 0.1);
@@ -190,7 +203,7 @@ header {
 
     input {
       font-size: 14px;
-      color: var(--grey);
+      color: #676767;
       font-family: inherit;
       border: none;
       padding: 18px 0 18px 60px;
@@ -210,9 +223,10 @@ header {
       float: right;
     }
   }
+
   .logos {
     display: flex;
-    min-height: 50px;
+    margin: 2em 0;
   }
 
   @media screen and (min-width: 840px) {
@@ -239,6 +253,11 @@ header {
   }
 }
 
+// Section: Illustration //
+
+.illustration {
+  text-align: center;
+}
 
 // Section: Guidance //
 
@@ -278,14 +297,12 @@ p.numbers {
 // Section: References //
 
 .references {
-  p {
-    color: var(--light-black);
-  }
   .references_link {
     font-size: 18px;
     color: var(--purple);
     font-weight: bold;
     margin: 0 auto;
+
     a:hover {
       font-weight: lighter;
     }
@@ -310,9 +327,11 @@ footer {
       }
     }
   }
+
   svg {
     width: auto;
   }
+
   .company, .terms {
     font-size: 13px;
     color: #8896A7;
