--- a/www.hlidacshopu.cz/src/stylesheets/main.scss
+++ b/www.hlidacshopu.cz/src/stylesheets/main.scss
@@ -233,9 +233,9 @@ header {
 
   .logos {
     display: flex;
-    margin: 1em 0;
-    img {
-      height: 50px;
+    margin: 0.5em 0;
+    a {
+      height: 40px;
       margin: 0 0.5em;
     }
   }
